# RAG-against-the-machine

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
stubs/bm25s/: __init__.pyi
stubs/fire/: __init__.pyi
student/: __main__.py  chunker.py  embedder.py  evaluator.py  generator.py  indexer.py  models.py  query_expander.py  retriever.py
