[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bm25s>=0.3.9",
    "fire>=0.7.1",
    "flake8>=7.3.0",
    "huggingface-hub>=0.26.0",
    "llama-cpp-python>=0.3.2",
    "mypy>=2.1.0",
    "pydantic>=2.13.4",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
